v0.13.0/_sources/projections/cyl/cyl_oblique_mercator_3.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_oblique_mercator_3.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_cyl_cyl_oblique_mercator_3.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_oblique_mercator_3.py:


Oblique Mercator, 3: origin and pole
====================================

Oblique configurations of the cylinder give rise to the oblique Mercator
projection. It is particularly useful when mapping regions of large lateral
extent in an oblique direction. Both parallels and meridians are complex
curves. The projection was developed in the early 1900s by several workers.

**oc**\|\ **oC**\ *lon0/lat0/lonp/latp/scale*\ [**+v**] or
**Oc**\|\ **OC**\ *lon0/lat0/lonp/latp/width*\ [**+v**]

The projection is set with **o** or **O**. The central meridian is set
by *lon0/lat0*. The projection pole is set by *lonp/latp* in option three.
Align the y-axis with the optional **+v**. The figure size is set
with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 20-34



.. image-sg:: /projections/cyl/images/sphx_glr_cyl_oblique_mercator_3_001.png
   :alt: cyl oblique mercator 3
   :srcset: /projections/cyl/images/sphx_glr_cyl_oblique_mercator_3_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    # Using the origin and projection pole
    fig.coast(
        projection="Oc280/25.5/22/69/12c",
        # Set bottom left and top right coordinates of the figure with "+r"
        region="270/20/305/25+r",
        frame="afg",
        land="gray",
        shorelines="1/thin",
        water="lightblue",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.254 seconds)


.. _sphx_glr_download_projections_cyl_cyl_oblique_mercator_3.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: cyl_oblique_mercator_3.ipynb <cyl_oblique_mercator_3.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: cyl_oblique_mercator_3.py <cyl_oblique_mercator_3.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: cyl_oblique_mercator_3.zip <cyl_oblique_mercator_3.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
